[package]
name = "ic-cdk"
version = "0.2.1"
authors = ["DFINITY Stiftung <sdk@dfinity.org>"]
edition = "2018"
description = "Canister Developer Kit for the Internet Computer."
homepage = "https://docs.rs/ic-cdk"
documentation = "https://docs.rs/ic-cdk"
license = "Apache-2.0"
readme = "README.md"
categories = ["api-bindings", "data-structures", "no-std"]
keywords = ["internet-computer", "types", "dfinity", "canister", "cdk"]
include = ["src", "Cargo.toml", "LICENSE", "README.md"]

[dependencies]
cfg-if = "0.1.10"
ic-types = "0.1.1"
serde = "1.0.110"
wee_alloc = { version = "0.4.5" }

[dependencies.candid]
version = "0.6.12"
features = ["cdk"]
git = "https://github.com/dfinity/candid.git"
branch = "blob-opt"
rev = "75eada49f31773aa87b067a52ba1fa5e99dd09d4"


[features]
experimental = []
